Se agrega un poco de css

--- a/index.html
+++ b/index.html
@@ -4,21 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Rifa</title>
+    <link rel="stylesheet" type="text/css" href="css/index.css">
   </head>
   <body>
     <header>
       <nav>
         <ul class="content-nav">
-          <li><a href="" class="navbtn">Home</a></li>
-          <li><a href="" class="navbtn">Rifa</a></li>
-          <li><a href="" class="navbtn">Premios</a></li>
-          <li><a href="" class="navbtn">Como Comprar</a></li>
+          <li><a href="#home" class="navbtn">Home</a></li>
+          <li><a href="#rifa" class="navbtn">Rifa</a></li>
+          <li><a href="#premios" class="navbtn">Premios</a></li>
+          <li><a href="#explica" class="navbtn">Como Comprar</a></li>
         </ul>
       </nav>
     </header>
     <main>
       <section id="home" class="home"></section>
-      <section id="rifa" class="rifa"></section>
+      <section id="rifa" class="rifa">
+        <article class="content-rifa">
+          <button class="btn-number">99</button>
+        </article>
+      </section>
       <section id="premios" class="premios"></section>
       <section id="explica" class=""></section>
     </main>
