se genera las funciones para la carga de rifas

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main>
       <section id="home" class="home"></section>
       <section id="rifa" class="rifa">
-        <article class="content-rifa">
+        <article id="content-rifa" class="content-rifa">
           <button class="btn-number">99</button>
         </article>
       </section>
@@ -28,5 +28,6 @@
       <section id="explica" class=""></section>
     </main>
     <footer></footer>
+    <script type="module" src="js/main.js"></script>
   </body>
 </html>
