Se agrega mas Css y logica JS de selecion de rifas.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
       </nav>
     </header>
     <main>
-      <section id="home" class="home"></section>
+      <section id="home" class="home">
+      </section>
       <section id="rifa" class="rifa">
         <article id="content-rifa" class="content-rifa">
-          <button class="btn-number">99</button>
         </article>
       </section>
       <section id="premios" class="premios"></section>
