se agregan imagenes, se modifica css, se modifica home, se modifica premios

--- a/index.html
+++ b/index.html
@@ -19,15 +19,44 @@
     </header>
     <main>
       <section id="home" class="home">
+        <article>
+          <h1 class="home-title">¡Hola! Somos Martin y Tati</h1>
+          <p class="home-subtitle">Estamos realizando una rifa para participar en el proximo campeonato de TaekWondo.</p>
+        </article>
+        <img src="assets/img/martin-tati.jpeg"></im>
       </section>
       <section id="rifa" class="rifa">
+        <h2>¡Numeros de la rifa!</h2>
         <article id="content-rifa" class="content-rifa">
         </article>
       </section>
-      <section id="premios" class="premios"></section>
+      <section id="premios" class="premios">
+        <h2>¡Estos son los premios!</h2>
+        <article class="gicard">
+          <img class="imggirf" src="assets/img/fotos-masajes.jpg">
+          <div class="textgirf">
+            <h3>Primer Premio:</h3>
+            <p></p>
+          </div>
+        </article>
+        <article class="gicard">
+          <div class="textgirf">
+            <h3>Segundo Premio:</h3>
+            <p></p>
+          </div>
+          <img class="imggirf" src="assets/img/foto-manicuria.webp">
+        </article>
+        <article class="gicard">
+          <img class="imggirf" src="assets/img/premio-sorpresa.jpg">
+          <div class="textgirf">
+            <h3>Tercer Premio:</h3>
+            <p></p>
+          </div>
+        </article>
+      </section>
       <section id="explica" class=""></section>
     </main>
-    <footer></footer>
+    <footer><p>Diseñado y programado MDLDeveloper</p></footer>
     <script type="module" src="js/main.js"></script>
   </body>
 </html>
