Se genera endpoints para listar las rifas y modificar el stat, se adjusta css y se agrega agradecimiento

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <body>
     <header>
       <nav class="navbar">
-        <img class="logonav" src="/assets/icons/logotaekwondosur.png">
+        <img class="logonav" src="assets/icons/logotaekwondosur.png">
         <ul class="content-nav">
           <li><a href="#home" class="navbtn">Home</a></li>
           <li><a href="#rifa" class="navbtn">Rifa</a></li>
@@ -31,7 +31,9 @@
         <p class="infobtn">Los numeros en color <strong class="descbtn" style="background-color: #98db9b;">Verde</strong> estan disponibles para ser comprados, los numeros en <strong class="descbtn" style="background-color: #eba1a1;">Rojo</strong> son los que ya fueron comprados, los que estan en <strong class="descbtn" style="background-color: #9cbdfa;">Celeste</strong> estan selecionados por otra persona y los que estan <strong class="descbtn" style="background-color: #EBFF7A;">Amarillo</strong> son los que usted selecciono.</p>
         <article id="content-rifa" class="content-rifa">
         </article>
-        <button style="margin-top: 40px;" id="btnbuy" class="navbtn">Comprar</button>
+
+        <button style="margin-top: 40px;" id="btnbuy" class="buybtn">Comprar</button>
+      
       </section>
       <section id="premios" class="premios">
         <h2>¡Estos son los premios!</h2>
@@ -45,7 +47,7 @@
         <article class="gicard gc2">
           <div class="textgirf">
             <h3>Segundo Premio:</h3>
-            <p class="descpremio">Una gift card para realizar un Esmaltado semipermanente en mano en <strong>Esthetic House</strong>.</p>
+            <p class="descpremio">Disfruta de una gift card para un esmaltado semipermanente en manos en <strong>Esthetic House</strong>. Este tratamiento incluye la eliminación de cutículas, la preparación de la lámina ungueal, la aplicación del esmaltado semipermanente y la hidratación final de la piel con cremas especiales.</p>
           </div>
           <img class="imggirf" src="assets/img/foto-manicuria.webp">
         </article>
@@ -57,13 +59,18 @@
           </div>
         </article>
       </section>
-      <section id="agradecimiento" class=""></section>
+      <section id="agradecimiento" class="agradecimiento">
+        <h2>Un agradecimiento especial!</h2>
+        <article class="esthetichouse-ty">
+          <img class="imggirf" src="assets/img/esthetichouse.jpeg" alt="Logo de Esthetic House">
+          <p class="ty">Queremos expresar nuestro más sincero agradecimiento a Esthetic House por su generoso patrocinio y por proporcionar las gift cards para nuestro sorteo. Gracias a su colaboración, hemos podido ofrecer a nuestros participantes una experiencia de belleza excepcional y valiosa. Valoramos profundamente su compromiso y generosidad.<strong>¡Muchas gracias, Esthetic House!</strong></p>
+        </article>
+      </section>
     </main>
     <footer>
       <span>Desarrollado por <a href="https://www.linkedin.com/in/mariodanielledesma">MDLDeveloper</a></span>
       <div class="iconsdiv">
       <a href="https://www.linkedin.com/in/mariodanielledesma/" target="_blank"><img class="iconfooter" src="assets/icons/linkedin.svg" alt="Botón de LinkedIn"></a>
-      <a href="https://github.com/MDLDeveloper" target="_blank"><img class="iconfooter" src="assets/icons/github.svg" alt="Botón de GitHub"></a>
       <a href="mailto:mariodanielledesma91@gmail.com" target="_blank"><img class="iconfooter" src="assets/icons/envelope-at.svg" alt="Botón de Email"></a>
       <a href="https://wa.me/+5491121853014" target="_blank" ><img class="iconfooter" src="assets/icons/whatsapp.svg" alt="Botón de WhatsApp"></a>
     </footer>
