Se agrega Modales, Endpoint y se corrige bug

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
       <script>
           // Establece la fecha y hora a la que finalizará la cuenta regresiva
-          const endTime = new Date("October 18, 2024 15:00:00").getTime();
+          const endTime = new Date("October 6, 2024 18:00:00").getTime();
   
           // Actualiza la cuenta regresiva cada segundo
           const countdownInterval = setInterval(() => {
@@ -69,7 +69,7 @@
         <article id="content-rifa" class="content-rifa">
         </article>
 
-        <button style="margin-top: 40px;" id="btnbuy" class="buybtn">Comprar</button>
+        <button style="margin-top: 40px;" id="btnbuy" class="buybtn">Reservar</button>
       
         <!-- Fin de Rifa-->
         <div>
