Se estiliza formulario de reserva, se agrega logica de mensajes de respuesta, se adapta back, se agrega .gitignore y se agrega componentes de twilio

--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
       <!-- Comienzo de Rifa-->
       
       <section id="rifa" class="rifa">
-        <div id="countdown"></div>
-
+        <div class="countdown">
+          <h3 style="text-align: center; margin: 0px;">Faltan para el sorteo:</h3>
+          <div id="countdown"></div>
+        </div>
       <script>
           // Establece la fecha y hora a la que finalizará la cuenta regresiva
-          const endTime = new Date("October 6, 2024 18:00:00").getTime();
+          const endTime = new Date("October 4, 2024 18:00:00").getTime();
   
           // Actualiza la cuenta regresiva cada segundo
           const countdownInterval = setInterval(() => {
@@ -73,7 +75,7 @@
       
         <!-- Fin de Rifa-->
         <div>
-          <p class="trasnalias">Si no deseas realizar la compra de alguna rifa pero queres ayudar para que Martin y Tati puedan participar del torneo podes realizar una transferencia al siguiente alias: <strong>un.alias.mp</strong></p>
+          <p class="trasnalias">Si no deseas realizar la compra de alguna rifa pero queres ayudar para que Martin y Tati puedan participar del torneo podes realizar una transferencia al siguiente alias: <strong>Isabelsandram91</strong></p>
         </div>
     </section>
       <section id="premios" class="premios">
