--- a/index.html
+++ b/index.html
@@ -11,10 +11,22 @@
       <nav class="navbar">
         <img class="logonav" src="assets/icons/logotaekwondosur.png">
         <ul class="content-nav">
-          <li><a href="#home" class="navbtn">Home</a></li>
-          <li><a href="#rifa" class="navbtn">Rifa</a></li>
-          <li><a href="#premios" class="navbtn">Premios</a></li>
-          <li><a href="#agradecimiento" class="navbtn">Agradecimiento</a></li>
+          <li>
+            <a id="hometext" href="#home" class="navbtn">Home</a>
+            <a id="homeicon" href="#home" class="navbtn"><img src="assets/icons/house-door.svg"></a>
+          </li>
+          <li>
+            <a id="rifatext" href="#rifa" class="navbtn">Rifa</a>
+            <a id="rifaicon" href="#rifa" class="navbtn"><img src="assets/icons/ticket-detailed.svg"></a>
+          </li>
+          <li>
+            <a id="premiotext" href="#premios" class="navbtn">Premios</a>
+            <a id="premioicon" href="#premios" class="navbtn"><img src="assets/icons/gift.svg"></a>
+          </li>
+          <li>
+            <a id="agradetext" href="#agradecimiento" class="navbtn">Agradecimiento</a>
+            <a id="agradeicon" href="#agradecimiento" class="navbtn"><img src="assets/icons/hand-thumbs-up.svg"></a>
+          </li>
         </ul>
       </nav>
     </header>
@@ -106,7 +118,7 @@
         <h2>Un agradecimiento especial!</h2>
         <article class="esthetichouse-ty">
           <img class="imggirf" src="assets/img/esthetichouse.jpeg" alt="Logo de Esthetic House">
-          <p class="ty">Queremos expresar nuestro más sincero agradecimiento a Esthetic House por su generoso patrocinio y por proporcionar las gift cards para nuestro sorteo. Gracias a su colaboración, hemos podido ofrecer a nuestros participantes una experiencia de belleza excepcional y valiosa. Valoramos profundamente su compromiso y generosidad.<strong>¡Muchas gracias, Esthetic House!</strong></p>
+          <p class="ty">Queremos expresar nuestro más sincero agradecimiento a Esthetic House por su generoso patrocinio y por proporcionar las gift cards para nuestro sorteo. Gracias a su colaboración, hemos podido ofrecer a nuestros participantes una experiencia de belleza excepcional y valiosa. Valoramos profundamente su compromiso y generosidad.<br><strong>¡Muchas gracias, Esthetic House!</strong></p>
         </article>
       </section>
     </main>
