se corrige bug de back, se agrega script de sql, se corrige ortografica en el index, se agrega funcion para generar un log de todas las consultas que se hagan al servidor para tener un registro de ello.

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <meta name="author" content="MDLDeveloper">
     <meta property="og:title" content="Rifa Solidaria - Ayuda a Martín y Tati a Participar en el Campeonato de TaekWondo">
     <meta property="og:description" content="Únete a nuestra rifa y apoya a Martín y Tati en su camino al campeonato. Grandes premios esperan por ti.">
-    <meta property="og:image" content="https://example.com/assets/img/martin-tati.jpeg">
-    <meta property="og:url" content="https://example.com/rifa">
+    <meta property="og:image" content="https://sorteomartinytati.rf.gd/assets/icons/logotaekwondosur.png">
+    <meta property="og:url" content="https://sorteomartinytati.rf.gd/rifa">
     <meta property="og:type" content="website">
     <title>Rifa Solidaria - Apoya a Martín y Tati en el Campeonato de TaekWondo</title>
     <link rel="icon" href="favicon.ico" type="image/x-icon">
@@ -43,7 +43,7 @@
       <section id="home" class="home">
         <article>
           <h1 class="home-title">¡Hola! <br> Somos Martín y Tati</h1>
-          <p class="home-subtitle">Para este Día de la Madre, te invitamos a ser parte de una causa muy especial. Estamos realizando una rifa para reunir fondos y así poder competir en el próximo <strong>Campeonato de TaekWondo</strong> 13 en Octubre. Con tu ayuda, podemos transformar este sueño en realidad. ¡Gracias por tu apoyo!</p>
+          <p class="home-subtitle">Para este Día de la Madre, te invitamos a ser parte de una causa muy especial. Estamos realizando una rifa para reunir fondos y así poder competir en el próximo <strong>Campeonato de TaekWondo</strong> el 13 de Octubre. Con tu ayuda, podemos transformar este sueño en realidad. ¡Gracias por tu apoyo!</p>
         </article>
         <img src="assets/img/martin-tati.jpeg" alt="Martín y Tati participando en TaekWondo">
       </section>
