Se corrige ortografia y redacción

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <section id="home" class="home">
         <article>
           <h1 class="home-title">¡Hola! <br> Somos Martín y Tati</h1>
-          <p class="home-subtitle">Para este Día de la Madre, te invitamos a ser parte de una causa muy especial. Estamos realizando una rifa para reunir fondos y así poder competir en el próximo <strong>Campeonato de TaekWondo</strong> el 13 de Octubre. Con tu ayuda, podemos transformar este sueño en realidad. ¡Gracias por tu apoyo!</p>
+          <p class="home-subtitle">Para este Día de la Madre te invitamos a ser parte de una causa muy especial, estamos realizando una rifa para reunir fondos y así poder competir en el próximo <strong>Campeonato de TaekWondo</strong> el 13 de Octubre. Con tu ayuda podemos transformar este sueño en realidad. ¡Gracias por tu apoyo!</p>
         </article>
         <img src="assets/img/martin-tati.jpeg" alt="Martín y Tati participando en TaekWondo">
       </section>
@@ -86,8 +86,8 @@
               }
           }, 1000);
       </script>
-        <h2>¡Numeros de la rifa!</h2>
-        <p class="infobtn">Los numeros en color <strong class="descbtn" style="background-color: #98db9b;">Verde</strong> estan disponibles para ser comprados, los numeros en <strong class="descbtn" style="background-color: #eba1a1;">Rojo</strong> son los que ya fueron comprados, los que estan en <strong class="descbtn" style="background-color: #9cbdfa;">Celeste</strong> estan selecionados por otra persona (si en 10 minutos no se realizan la reserva volveran a estar disponible), los que estan <strong class="descbtn" style="background-color: #EBFF7A;">Amarillo</strong> son los que usted selecciono y los que estan en <strong class="descbtn" style="background-color: #ac659cb9;">Violeta</strong> son los reservados que se encuentran pendiente a aprobar (si no se verifica la compra de los mismos se vuelven a poner en disponible).</p>
+        <h2>¡Números de la rifa!</h2>
+        <p class="infobtn">Los números en color <strong class="descbtn" style="background-color: #98db9b;">Verde</strong> están disponibles para ser comprados, los números en <strong class="descbtn" style="background-color: #eba1a1;">Rojo</strong> son los que ya fueron comprados, los que están en <strong class="descbtn" style="background-color: #9cbdfa;">Celeste</strong> están seleccionados por otra persona (si en 10 minutos no se realiza la reserva volverán a estar disponibles), los que están <strong class="descbtn" style="background-color: #EBFF7A;">Amarillo</strong> son los que usted selecciono y los que están en <strong class="descbtn" style="background-color: #ac659cb9;">Violeta</strong> son los reservados que se encuentran pendientes de aprobación (si no se verifica la compra de los mismos se vuelven a poner en disponible).</p>
         <article id="content-rifa" class="content-rifa">
         </article>
 
@@ -98,7 +98,7 @@
           <h2 class="trasnalias">Numero para enviar el comprobante de transferencia:<br>
             <a href="https://wa.me/+5491163581278" target="_blank" >11-6358-1278</a>
           </h3>
-          <p class="trasnalias">Si no deseas realizar la compra de alguna rifa pero queres ayudar para que Martin y Tati puedan participar del torneo podes realizar una transferencia al siguiente alias: <strong>Isabelsandram91</strong></p>
+          <p class="trasnalias">Si no deseas realizar la compra de alguna rifa pero quieres ayudar para que Martin y Tati puedan participar del torneo puedes realizar una transferencia al siguiente alias: <strong>Isabelsandram91</strong></p>
         </div>
     </section>
       <section id="premios" class="premios">
@@ -121,12 +121,12 @@
           <img class="imggirf" src="assets/img/premio-sorpresa.jpg">
           <div class="textgirf">
             <h3>Tercer Premio:</h3>
-            <p class="descpremio">¡Un super premio sopresa!<br> El mismo se dara a conocer en el momento que se realice el sorteo.</p>
+            <p class="descpremio">¡Un súper premio sorpresa!<br> El mismo se dará a conocer en el momento que se realice el sorteo.</p>
           </div>
         </article>
       </section>
       <section id="agradecimiento" class="agradecimiento">
-        <h2>Un agradecimiento especial!</h2>
+        <h2>¡Un agradecimiento especial!</h2>
         <article class="esthetichouse-ty">
           <img class="imggirf" src="assets/img/esthetichouse.jpeg" alt="Logo de Esthetic House">
           <p class="ty">Queremos expresar nuestro más sincero agradecimiento a Esthetic House por su generoso patrocinio y por proporcionar las gift cards para nuestro sorteo. Gracias a su colaboración, hemos podido ofrecer a nuestros participantes una experiencia de belleza excepcional y valiosa. Valoramos profundamente su compromiso y generosidad.<br><strong>¡Muchas gracias, Esthetic House!</strong></p>
