Se sube comit pendiente

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="google-site-verification" content="fZGcNmlibgciAPNvDq5DD2pl5s1AcdmgqDu14dmoy14" />
     <meta name="description" content="Rifa solidaria para ayudar a Martín y Tati a participar en el próximo campeonato de TaekWondo. ¡Participa y gana grandes premios!">
     <meta name="keywords" content="rifa, taekwondo, campeonato, premios, sorteo, ayuda, solidario">
     <meta name="author" content="MDLDeveloper">
