--- a/giftcard/giftcard.html
+++ b/giftcard/giftcard.html
@@ -34,12 +34,24 @@
                     <img style="border-radius: 25%;" src="../assets/img/esthetichouse.jpeg" alt="Logo de Esthetic House" class="img-fluid">
                 </div>
                 <div class="d-flex flex-column justify-content-center text-center w-100">
-                    <h4>¡Te regalaron una!</h4>
+
+                  <svg width="210" height="80" style="margin: -15 auto;" xmlns="http://www.w3.org/2000/svg">
+                    <!-- Define a longer path for the text -->
+                    <path id="curve" d="M0,50 Q100,10 200,50" fill="transparent"/>
+                    
+                    <!-- Text along the curve with specified color -->
+                    <text fill="#4c3652" font-size="22" font-family="Arial">
+                      <textPath href="#curve">
+                        ¡TE GANASTE UNA!
+                      </textPath>
+                    </text>
+                  </svg>
+
                     <h2 class="fw-bold" style="font-family: Papyrus;">Gift Card</h2>
-                    <div class="fw-bold p-4 mt-3">
-                        <p class="fw-bold">Vale por: __________________________</p>
+                    <div class="fw-bold p-4 mt-1">
+                        <p class="fw-bold">Vale por: <span class="fw-normal">Masajes Cuerpo/C</span></p>
                         <p>De parte de: ______________________</p>
-                        <p class="fw-bold mt-5 ms-4">Válido Hasta:  ___ /___/_____</p>
+                        <p class="fw-normal ms-4">Válido Hasta: <strong>31/10/2024</strong></p>
                     </div>
                 </div>
                 <div style="width: 130px; float: right; margin: 0px 20px 0px 0px; margin-top: -10px;">
